UnwindIterator now uses expressions